add level filter support

--- a/src/less/log.io.less
+++ b/src/less/log.io.less
@@ -261,6 +261,11 @@ body {
 					margin-left: 5px;
 				}
 			}
+
+			.level-wrapper{
+				margin-top: 5px;
+				margin-left: 7px;
+			}
 		}
 
 		div.messages {
