--- a/templates/logMessage.html
+++ b/templates/logMessage.html
@@ -1,4 +1,5 @@
 <p>
+  <span class="level"><%= lmessage.get('level') %></span>
   <span class='stream color<%= lmessage.get('stream').color %>'><%= lmessage.get('stream').id %></span>
   <span class='node color<%= lmessage.get('node').color %>'><%= lmessage.get('node').id %></span>
   <span class='message'><%= msg %></span>
